# Rosnodelets

./: CMakeLists.txt  README.md  package.xml
app/: nodelet_manager.cc
conf/manager/: Manager.launch
conf/nodelets/: Template.txt
include/rosnodelets/manager/: NodeletManager.h
include/rosnodelets/template/: BaseNodelet.h  Include.txt  Source.txt
include/rosnodelets/threads/: LICENSE.txt  single_thread.h  thread_pool.h  thread_pool.inl  thread_queue.h  thread_queue.inl
script/: add_nodelet
src/manager/: NodeletManager.cc
