<?xml version="1.0"?>
<package format="2">
  <name>rosnodelets</name>
  <version>0.0.0</version>
  <description>The rosnodelets package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="marcotreglia1@gmail.com">Marco Treglia</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend> nodelet </depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
